Ticket #5: implemented simple landing page

--- a/landing/index.html
+++ b/landing/index.html
@@ -9,16 +9,18 @@
               content="Landing for veraPDF viewer"
         />
         <title>veraPDF viewer</title>
+        <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon.ico">
+        <link rel="stylesheet" media="all" href="./assets/css/style.css">
     </head>
     <body>
-        <header>
-            <div>veraPDF viewer</div>
-        </header>
         <main>
-            <div>Demonstration of veraPDF landing deployed with Docker</div>
+            <img src="assets/img/veraPDF-logo-400.png" class="logo" alt="logo" />
+            <div class="app-info">
+                <h2>veraPDF for WCAG</h2>
+                <span>Latest version: 0.1.0</span>
+                <span>Licence: GNU Lesser General Public License</span>
+                <button class="btn">Go to demo</button>
+            </div>
         </main>
-        <footer>
-            <div>version 0.0.1</div>
-        </footer>
     </body>
 </html>
