#2: Include demo app into Docker setup

--- a/landing/index.html
+++ b/landing/index.html
@@ -19,7 +19,7 @@
                 <h2>veraPDF for WCAG</h2>
                 <span>Latest version: 0.1.0</span>
                 <span>Licence: GNU Lesser General Public License</span>
-                <button class="btn">Go to demo</button>
+				<a class="btn" href="/demo">Go to demo</a>
             </div>
         </main>
     </body>
