--- a/landing/index.html
+++ b/landing/index.html
@@ -17,7 +17,7 @@
             <img src="assets/img/veraPDF-logo-400.png" class="logo" alt="logo" />
             <div class="app-info">
                 <h2>veraPDF for WCAG</h2>
-                <span>Latest version: 0.1.0</span>
+                <span>Latest version: 0.4.0 - July 19, 2021</span>
 				<a class="btn" href="/demo">Go to demo</a>
             </div>
         </main>
