--- a/landing/index.html
+++ b/landing/index.html
@@ -11,13 +11,14 @@
         <title>veraPDF viewer</title>
         <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon.ico">
         <link rel="stylesheet" media="all" href="./assets/css/style.css">
+        <script src="index.js"></script>
     </head>
     <body>
         <main>
             <img src="assets/img/veraPDF-logo-400.png" class="logo" alt="logo" />
             <div class="app-info">
                 <h2>veraPDF for WCAG</h2>
-                <span>Latest version: 0.7.0 - April 7, 2022</span>
+                <div id="app-version-label" hidden>Latest version: <span id="app-version"></span></div>
 				<a class="btn" href="/demo">Go to demo</a>
             </div>
         </main>
