Update dependencies version

--- a/landing/index.html
+++ b/landing/index.html
@@ -19,7 +19,7 @@
             <div class="app-info">
                 <h2>veraPDF for WCAG</h2>
                 <div id="app-version-label" hidden>Latest version: <span id="app-version"></span></div>
-				<a class="btn" href="/demo">Go to demo</a>
+				<a class="btn" href="/validate">Start</a>
             </div>
         </main>
     </body>
