Add privacy policy

--- a/landing/index.html
+++ b/landing/index.html
@@ -48,7 +48,8 @@
                 <div id="app-version-label" hidden>Latest version<br><span id="app-version"></span></div>
                 <div class="developed-by">Developed by 
                     <a href="https://duallab.com/" target="_blank">Dual Lab</a>,<br>powered by <a href="https://verapdf.org/" target="_blank">VeraPDF</a></div>
-                <div class="privacy-policy">Privacy Policy</div>
+                <div class="privacy-policy">
+                    <a href="/validate/privacy-policy" target="_blank">Privacy Policy</a></div>
             </div>
         </footer>
     </body>
