--- a/landing/index.html
+++ b/landing/index.html
@@ -17,7 +17,7 @@
         <header>
             <div class="header" id="header">
                 <a href="./">
-                    <img src="assets/img/logo.svg" class="logo" alt="logo" />
+                    <img src="assets/img/pdf4wcag_logo.svg" class="logo" alt="logo" />
                 </a>
                 <a class="btn btn-header" id="btn-header" href="/validate" hidden>Try now</a>
             </div>
@@ -47,7 +47,7 @@
             <div class="footer-content">
                 <div id="app-version-label" hidden>Latest version<br><span id="app-version"></span></div>
                 <div class="developed-by">Developed by 
-                    <a href="https://duallab.com/" target="_blank">Dual Lab</a>,<br>powered by <a href="https://verapdf.org/" target="_blank">VeraPDF</a></div>
+                    <a href="https://duallab.com/" target="_blank">Dual Lab</a>,<br>powered by <a href="https://verapdf.org/" target="_blank">veraPDF</a></div>
                 <div class="privacy-policy">
                     <a href="/validate/privacy-policy" target="_blank">Privacy Policy</a></div>
             </div>
