Update title and fix issue with redirect to static pages

--- a/landing/index.html
+++ b/landing/index.html
@@ -6,9 +6,9 @@
             content="width=device-width, initial-scale=1"
         />
         <meta name="description"
-            content="Landing for veraPDF viewer"
+            content="Landing for PDF Accessibility checker"
         />
-        <title>veraPDF viewer</title>
+        <title>PDF Accessibility checker | PDF/UA and WCAG</title>
         <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon.ico">
         <link rel="stylesheet" media="all" href="./assets/css/style.css">
         <script src="index.js"></script>
