--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>veraPDF for WCAG</title>
+    <title>PDF Accessibility checker | PDF/UA and WCAG</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
