--- a/landing/index.html
+++ b/landing/index.html
@@ -31,11 +31,13 @@
             <div class="main-content">
                 <div class="info">
                     <h3>What does this application do?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nesciunt nam inventore reiciendis repellendus corporis iste optio. Ipsum pariatur, minus, earum tempora qui asperiores exercitationem laborum a natus cupiditate iste.</p>
+                    <p>Validates PDF documents against a family of standards addressing accessibility: WCAG, PDF/UA-1 and PDF/UA-2. This mostly includes checks which can be performed by deterministic 
+                        algorithms and do not require human interaction. An experimental profile covers some of the human checks.</p>
                 </div>
                 <div class="info">
                     <h3>How to use this application?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nesciunt nam inventore reiciendis repellendus corporis iste optio. Ipsum pariatur, minus, earum tempora qui asperiores exercitationem laborum a natus cupiditate iste.</p>
+                    <p>Upload your PDF document, choose the validation profile and start validation. The results include the list of errors and the visualization of the related content 
+                        in the document as well as the corresponding part of the structure tree whenever possible.</p>
                 </div>
             </div>
             <a class="read-more" href="/validate/about">
