--- a/landing/index.html
+++ b/landing/index.html
@@ -31,12 +31,12 @@
             <div class="main-content">
                 <div class="info">
                     <h3>What does this application do?</h3>
-                    <p>Validates PDF documents against a family of standards addressing accessibility: WCAG and PDF/UA.</p><p>Complete set of machine checks which can be performed by deterministic 
+                    <p>Validates PDF documents against accessibility standards: WCAG and PDF/UA.</p><p>Complete set of machine checks which can be performed by deterministic 
                         algorithms and do not require human interaction.</p><p>An experimental profile that covers human checks for correctness of semantics.</p>
                 </div>
                 <div class="info">
                     <h3>How to use this application?</h3>
-                    <p>Upload your PDF document, choose the validation profile and start validation.</p><p>Get the report with the list of errors and visual preview of the related content.</p>
+                    <p>Upload your PDF document, choose the validation profile and start validation.</p><p>Get the report with the list of errors, visual preview of the related content and additional technical details.</p>
                     <p>Inspect the corresponding tag(s) in the document structure tree.</p>
                 </div>
             </div>
